Wed May 06 05:24:52 GMT 2015  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/brass/,backends/chert/chert_database.cc,
	  backends/chert/chert_table.cc,backends/chert/chert_version.cc,
	  backends/flint/flint_database.cc,backends/flint/flint_table.cc,
	  backends/flint/flint_version.cc,backends/remote/remote-database.cc,
	  bin/,examples/copydatabase.cc,examples/quest.cc,
	  examples/xapian-metadata.cc,net/tcpclient.cc,
	  queryparser/queryparser.lemony,tests/harness/: Add spaces between
	  literal strings and macros which expand to literal strings for C++11
	  compatibility.

Wed May 06 05:04:47 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-tcpsrv.cc: Use STRINGIZE() to include defaults literally
	  in string for --help.

Wed May 06 05:00:38 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING: Update URL.

Wed May 06 04:59:33 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,xapian-config.in: Rename ANSI_CXXFLAGS to ISO_CXXFLAGS
	  and talk about ISO C++ in configure messages.

Wed May 06 04:44:32 GMT 2015  Olly Betts <olly@survex.com>

	* .gitignore: Adjust for m4 subdirectory to only match files which
	  aren't in git.

Wed May 06 04:37:28 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Fix typo so cached result of test in
	  is_uninstalled() is actually used on subsequent calls.  Fixes #676,
	  reported (with patch) by Ryan Schmidt.

Wed May 06 04:02:33 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_database.cc,backends/glass/glass_database.cc:
	  Fix get_changeset_revisions() not to potentially read uninitialised
	  data if a changeset file is truncated.

Wed May 06 04:00:20 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/exactphrasepostlist.cc: When matching an exact phrase, if a
	  term doesn't occur where we want, we can advance "term 0" using
	  skip_to() based on where the term does next occur rather than just
	  calling next() on it.

Wed May 06 03:54:52 GMT 2015  Olly Betts <olly@survex.com>
